# MatyMemory

./: Cargo.toml  Dockerfile  STATUS-phase-2.md  docker-compose.yml
src/: config.rs  main.rs  repl.rs  ui.rs
src/cli/: mod.rs  output.rs  parse.rs
src/executor/: get.rs  inspect.rs  list.rs  mod.rs  recall.rs  relation_ops.rs  remember.rs  stats.rs  status_ops.rs  tag_ops.rs  update.rs
src/store/: error.rs  memory.rs  mod.rs  models.rs  queries.rs  relations.rs  retrieval.rs  schema.rs  status.rs  tags.rs
tests/: cli_integration.rs
